RESULTS/AutoSpec/raw_results/out-3.5-pIp/37_0009/37_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/37_0009/37_merged.c:17:1: error: unterminated comment
   17 | /*@;
      | ^
